[package]
name = "android-file-pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.8"
tokio = { version = "1", features = ["full"] }


[features]
default = []
dev = []
